# rssbot

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: docker.yml  rust.yml
crates/rssbot-common/: Cargo.toml
crates/rssbot-common/src/: chrono_utils.rs  config.rs  lib.rs
crates/rssbot-common/src/observability/: mod.rs  tracing.rs
crates/rssbot-entities/: Cargo.toml
crates/rssbot-entities/src/: subscription.rs  user.rs
crates/rssbot-migrator/: Cargo.toml
crates/rssbot-migrator/src/: lib.rs  m20240617_112207_create_table.rs  main.rs
crates/rssbot-server/: Cargo.toml
crates/rssbot-server/src/: data.rs  filters.rs  handlers.rs  main.rs
crates/rssbot-server/src/handlers/: private.rs  public.rs
crates/rssbot-server/src/services/: subscription.rs  user.rs
