[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
name = "rssbot"
description = "A simple telegram bot that sends RSS feed updates to a chat."
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/AH-dark/rssbot.git"
license = "AGPL-3"
authors = [
    "AH-dark <ahdark0428@gmail.com>"
]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[workspace.dependencies]
rssbot-common = { path = "crates/rssbot-common" }
rssbot-entities = { path = "crates/rssbot-entities" }
rssbot-migrator = { path = "crates/rssbot-migrator" }

log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "tracing", "sync", "time"] }
dotenv = "0.15"
anyhow = "1.0"
chrono = { version = "0.4", features = ["default", "serde"] }
serde = { version = "1.0", features = ["derive"] }
distributed-scheduler = { version = "2.0.0", features = ["driver-redis"] }

opentelemetry = "0.23"
opentelemetry-otlp = { version = "0.16", features = ["http-proto", "grpc-tonic", "reqwest"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.15"
tracing = "0.1"
tracing-opentelemetry = "0.24"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

teloxide = "0.12"
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
redis = "0.25"
