[package]
name = "rssbot-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
envy = "0.4"

opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
