[package]
name = "rssbot-common"
version = "0.3.0"
edition = "2021"

[lib]
name = "rssbot_common"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
envy = "0.4"

opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
