[package]
name = "rssbot-migrator"
version = "0.3.1"
edition = "2021"
publish = false

[[bin]]
name = "migrator"
path = "src/main.rs"

[lib]
name = "rssbot_migrator"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
rssbot-entities = { workspace = true }

[dependencies.sea-orm-migration]
version = "0.12"
features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
]
