[package]
name = "rssbot-server"
version = "0.3.3"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
rssbot-common = { workspace = true }
rssbot-entities = { workspace = true }
rssbot-migrator = { workspace = true }

log = { workspace = true }
pretty_env_logger = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
rss = "2.0"
reqwest = { version = "0.12", features = ["default", "gzip", "http2"] }
thiserror = "1.0"

tracing = { workspace = true }

distributed-scheduler = { workspace = true, features = ["driver-redis"] }
teloxide = { workspace = true, features = ["webhooks", "webhooks-axum", "macros", "redis-storage"] }
sea-orm = { workspace = true }
redis = { workspace = true, features = ["tokio-rustls-comp"] }
uuid = { version = "1.10", features = ["v4"] }
serde_json = "1.0"
